--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,15 @@
     <title>miaomi</title>
   </head>
   <body>
-    <div id="app"></div>
-
+    <noscript>
+      We're sorry
+    </noscript>
+    <style>
+      #app{display: flex;height: 100%;}
+      #app div{margin: auto;color: #666;}
+    </style>    
+    <div id="app">
+      <div>小猫咪努力加载中...</div>
+    </div>
   </body>
 </html>
